# ProcessPar

./: .gitignore  ProcessPar.hs  brittany.yaml  process-par.cabal
examples/: Example.hs  fib.hs  lines.hs
