name: process-par
version: 0.1
synopsis: Run computations in slave processes
author: Jose Iborra
maintainer: pepeiborra@gmail.com
copyright: Jose Iborra Lopez 2019
build-type: Simple
cabal-version: >= 1.8

library
  build-depends:
    base,
    binary,
    bytestring,
    deepseq >= 1.4,
    distributed-closure,
    process,
    stm,
    transformers,
    typed-process,
    unix
  exposed-modules:
    ProcessPar

executable example
  hs-source-dirs:      examples
  main-is:             Example.hs
  build-depends:       async, base, process-par
  ghc-options:         -threaded
